--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,8 @@
     "express": "~4.16.1",
     "jade": "~1.11.0",
     "mongoose": "^5.7.5",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "ws": "^7.2.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
